Changed font, fixed alignment of contact section, added a textured background

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,28 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    
+    font-family: 'Poppins', sans-serif;
 }
 
 html, body {
     background-color: #f5f5f5;
+    background-image:
+    linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+    linear-gradient(#eee .1em, transparent .1em);
+    background-size: 100% 1.2em;
 }
 
 .header {
     min-height: 26vh;
     width: 100%;
+}
+
+@media (max-width: 1500px){
+    html, body{
+        background-image:
+        linear-gradient(#eee .1em, transparent .1em);
+    }
 }
 
 nav {
@@ -26,6 +38,7 @@ nav {
 
 .text-box a:link{
     color: #02a5ba;
+    text-decoration:none;
 }
 
 .text-box a:visited{
@@ -90,7 +103,7 @@ nav img{
     margin-top: 1%;
 }
 .text-box p {
-    margin: 10px 0 10px 0;
+    margin: 0px 0 10px 0;
     font-size: 20px;
     color: black;
     text-align: justify;
@@ -279,7 +292,7 @@ h3{
 
 .contact-me {
     width: 80%;
-    padding-top: 20px;
+    padding-top: 1px;
     justify-content: center;
     text-align: center;
     margin: auto;
